@@ -322,6 +322,17 @@ $optional_delimiter = 'detect';
  */
 $pop_before_smtp = false;
 
+/**
+ * POP before SMTP server address
+ *
+ * When using POP3 before SMTP, if the POP server address is
+ * not the same as the SMTP server address, specify it here.
+ * If this is left empty, the SMTP server address will be
+ * used by default.
+ * @global bool $pop_before_smtp_host
+ */
+$pop_before_smtp_host = '';
+
 
 /*** Folder Settings ***/
 /**
